# Image-Segmentation

./: .gitignore  CMakeLists.txt  README.md
data/: 32.json  dupes.json  noDupes.json  rubik.palette  rubik_dupes.palette  rubik_noDupes.palette  settings.json  suzanne.palette  suzanne_dupes.palette  suzanne_noDupes.palette  testing.json
src/: main.cpp
src/colourSpace/: ColorSpace.hpp  OkLCh.cpp  OkLab.cpp  OkLab.h
src/kmeans/: Colour.cpp  Colour.h  KMeans.cpp  KMeans.h
src/other/: Log.cpp  Log.h  Random.cpp  Random.h
